--- a/src/app/pages/components/orders/content-table/content-table.component.html
+++ b/src/app/pages/components/orders/content-table/content-table.component.html
@@ -15,21 +15,13 @@
       </ng-template>
       <ng-template pTemplate="body" let-item >
         <tr>
-          <td>{{ item.id }}</td>
-          <td>
-            <!-- <p-image
-              [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + item.image"
-              [alt]="item.name"
-              [preview]="true"
-              width="100px"
-              height="100px"
-            ></p-image> -->
-          </td>
+          <td>{{ item.code }}</td>
+          <td>{{ item.file }}</td>
           <td>{{ item.name }}</td>
           <td>{{ item.quantity }}</td>
-          <td>{{ item.category }}</td>
-          <td>{{ item.status }}</td>
-          <td>$ {{ item.price }}</td>
+          <td>{{ item.category.name }}</td>
+          <td>{{ item.selectedStatus.name }}</td>
+          <td>$ {{ item.priceStacked }}</td>
           <td class="button-style">
             <i class="button pi pi-trash w-full border-round" (click)="removeFromCartOrders(item)"></i>
           </td>
