error card detail page id error

--- a/src/app/dashboard/components/product-management/product-management.component.html
+++ b/src/app/dashboard/components/product-management/product-management.component.html
@@ -46,7 +46,7 @@
         </ng-template>
         <ng-template pTemplate="body" let-customer>
           <tr>
-            <td>{{ customer.code }}</td>
+            <td>{{ customer.id }}</td>
             <td>{{ customer.name }}</td>
             <td>{{ customer.file }}</td>
             <td>{{ customer.priceStacked }}</td>
