--- a/src/app/pages/components/main/login/login.component.html
+++ b/src/app/pages/components/main/login/login.component.html
@@ -70,10 +70,11 @@
       }}
       <!-- {{userFormLogin.get('password')?.value.lenght() < 8 ? ("Şifre en az 8 karakter uzunluğunda olmalıdır") : '' }} -->
     </small>
-    <span class="mt-4">
+    <span class="mt-4" style="width:35%;">
       <div class="remember-forget">
         <div
-          class="flex flex-row justify-content-center align-content-center align-items-center"
+          class="flex flex-row mb-2"
+          style="float: left;"
         >
           <div>
             <input
