--- a/src/app/pages/components/main/resetpassword/resetpassword.component.html
+++ b/src/app/pages/components/main/resetpassword/resetpassword.component.html
@@ -7,6 +7,7 @@
       <h2>Orion Innovation</h2>
     </div>
     <span class="p-float-label mt-4">
+      <i class="pi pi-envelope"></i>
       <input
         pInputText
         id="email"
@@ -36,12 +37,12 @@
           : ""
       }}
     </small>
-    <span class="button-style">
+    <span class="button-style mt-4">
       <button class="button w-12rem">
         {{ "resetForm.buttonLabelNew" | transloco }}
       </button>
     </span>
-    <span class="button-style">
+    <span class="button-style mt-4">
       <button
         class="button w-12rem custom-button"
         routerLink="/login"
