--- a/src/app/pages/components/product/card/card.component.scss
+++ b/src/app/pages/components/product/card/card.component.scss
@@ -4,3 +4,9 @@ width: 100%;}
   text-decoration: none;
   color: black;
 }
+.search-text{
+  position: absolute;
+  z-index: 1;
+  margin-top: 15px;
+  left: 1.5%;
+}
