--- a/src/app/pages/components/main/login/login.component.scss
+++ b/src/app/pages/components/main/login/login.component.scss
@@ -15,7 +15,7 @@ a:hover{
 
 .container {
   width: 100%;
-  min-height: 100vh;
+  height: auto;
   justify-content: center;
   align-items: center;
   align-content: center;
@@ -28,23 +28,20 @@ a:hover{
   display: flex;
   flex-direction: column;
   width: 600px;
-  background-color: #00000113;
+  background-color: transparent;
   margin: 15px;
   padding: 50px;
   justify-content: center;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
-  border-radius: 20px;
   align-items: center;
 }
 
 .remember-forget {
-  margin: 0 15px;
+  margin: 0;
   font-size: 15px;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  justify-content: start;
+  align-items: start;
 }
 .remember-forget label {
   margin-right: 10px;
