--- a/src/app/pages/components/main/main.component.scss
+++ b/src/app/pages/components/main/main.component.scss
@@ -21,25 +21,12 @@ p{
   font-size: 12px;
   color: #000;
 }
-
-.container{
-  border: 2px  rgba(255, 255, 255, 0.5);
-  border-top-style: solid;
-  border-right-style: solid;
-  border-bottom-style: none;
-  border-left-style: solid;
-  border-color: #000;
-
-}
 .card{
   position: relative;
-  border: 2px solid  rgba(255, 255, 255, 0.905);
-  background-color: #00000113;
+  background-color: transparent;
   width: 600px;
-  border-color: #000;
   display: flex;
   justify-content: space-around;
-  border-radius: 10px;
   padding: 50px 100px 70px 100px;
 
 }
