--- a/src/app/pages/components/main/register/register.component.scss
+++ b/src/app/pages/components/main/register/register.component.scss
@@ -1,28 +1,28 @@
 
 .container {
-  width: 100%;
-  min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
-  padding: 15px;
-  display: flex;
-  background: transparent;
+    width: 100%;
+    min-height: 100vh;
+    justify-content: center;
+    align-items: flex-start;
+    align-content: center;
+    padding: 15px;
+    display: flex;
+    background: transparent;
+    flex-wrap: nowrap;
+    flex-direction: row;
 }
 
 .container form {
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
+  align-content: center;
   flex-wrap: wrap;
   padding: 20px;
   width: 650px;
   height: auto;
-  background-color: #00000113;
+  background-color: transparent;
   margin: 15px;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
-  border-radius: 20px;
-  align-items: center;
+  align-items: flex-start;
 }
 
 .register-header h2{
