--- a/src/app/pages/components/main/resetpassword/resetpassword.component.scss
+++ b/src/app/pages/components/main/resetpassword/resetpassword.component.scss
@@ -2,24 +2,23 @@
 .container {
   width: 100%;
   min-height: 100vh;
-  justify-content: center;
-  align-items: center;
-  align-content: center;
+  justify-content: space-around;
+  align-content: space-between;
   padding: 15px;
   display: flex;
   background: transparent;
+  flex-direction: row-reverse;
+  flex-wrap: wrap;
 }
 
 .container form {
   display: flex;
   flex-direction: column;
   width: 600px;
-  background-color: #00000113;
+  background-color: transparent;
   margin: 15px;
   padding: 50px;
   justify-content: center;
-  border: 2px solid rgba(255, 255, 255, 0.5);
-  border-color: #000;
   border-radius: 20px;
   align-items: center;
 }
