--- a/src/app/pages/components/navbar-list/navbar-list.component.html
+++ b/src/app/pages/components/navbar-list/navbar-list.component.html
@@ -1,16 +1,16 @@
 <nav class="navbar align-items-center justify-content-evenly ">
-  <ul class="menu flex flex-row align-items-center ">
-    <img src="https://www.orioninc.com/wp-content/uploads/2023/03/OI_logo.png" height="60" class="mr-2" routerLink="/product" />
-    <div class="sidebar flex flex-row">
-      <ul class="menu flex flex-row">
-        <li class="menu-item">
+  <ul class="menu flex flex-row  ">
+      <li class="menu-item ">
+        <img src="assets/images/OI_logo.png" height="60" class="mr-2" routerLink="/product" />
+      </li>
+        <li class="menu-item ">
           <a routerLink="/account">
             <i class="pi pi-user"></i> {{'navigationForm.account' | transloco}}
           </a>
         </li>
-        <li class="menu-item">
+        <li class="menu-item ">
           <a routerLink="/orders">
-            <i class="pi pi-shopping-cart" style="width: 25px;">
+            <i class="pi pi-shopping-cart">
               <span pBadge [severity]="'success'" [value]="orderBadge"></span>
             </i> {{'navigationForm.orders' | transloco}}
           </a>
@@ -37,21 +37,15 @@
             <i class="pi pi-cog"></i> {{'navigationForm.manager' | transloco}}
           </a>
         </li>
+        <select (change)="setLanguage()" [(ngModel)]="selectedLanguage" class="custom-select flex border-0 text-lg ml-3">
+          <option *ngFor="let option of stateOptions" [ngValue]="option.value">{{ option.label }}</option>
+        </select>
         <li class="menu-item">
           <a routerLink="/">
             <i class="pi pi-sign-out"></i> {{'navigationForm.logout' | transloco}}
           </a>
         </li>
-        <select (change)="setLanguage()" [(ngModel)]="selectedLanguage" class="custom-select flex border-0 text-lg ml-3">
-          <option *ngFor="let option of stateOptions" [ngValue]="option.value">{{ option.label }}</option>
-        </select>
-
       </ul>
-    </div>
-
-
-  </ul>
-
 </nav>
 
 
