--- a/src/app/pages/components/navbar-list/navbar-list.component.scss
+++ b/src/app/pages/components/navbar-list/navbar-list.component.scss
@@ -6,9 +6,14 @@
   backdrop-filter: blur(15px);
 
 }
+
+.menu{
+  justify-content: center;
+  align-items: center;
+}
 .menu-item{
-  margin-left: 15px;
-  margin-right: 25px;
+  margin-left: auto;
+  margin-right: auto;
   list-style-type: none;
 }
 .menu-item a{
@@ -25,6 +30,5 @@
 }
 
 .menu-item i{
-
   margin-right: 5px;
 }
