--- a/src/app/pages/components/orders/content-table/content-table.component.scss
+++ b/src/app/pages/components/orders/content-table/content-table.component.scss
@@ -10,6 +10,9 @@
 
 .container-table {
   padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center
 }
 
 .table {
@@ -17,6 +20,7 @@
   border: 1px solid #e0e0e0;
   border-radius: 0.5rem;
   overflow: hidden;
+
 }
 
 table {
