--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card">
-  <div class="p-input-icon-left">
+  <div class="p-input-icon-left search-text">
     <i class="pi pi-search"></i>
     <input
       pInputText
@@ -27,15 +27,20 @@
             <div
               class="flex flex-column sm:flex-row justify-content-between align-items-center xl:align-items-start flex-1 gap-4"
             >
+
               <div
                 class="flex flex-column align-items-center sm:align-items-start gap-3"
               >
+              <img
+                class="w-9 shadow-2 border-round"
+                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name"
+              />
                 <div class="text-2xl font-bold text-900">
                   {{ product.name }}
 
                 </div>
                 <p-rating
-                  [ngModel]="product.valueRating"
+                  [ngModel]="product.rating"
                   [readonly]="true"
                   [cancel]="false"
                 ></p-rating>
@@ -43,11 +48,11 @@
                   <span class="flex align-items-center gap-2">
                     <i class="pi pi-tag"></i>
                     <span class="font-semibold">{{
-                      product.category.name
+                      product.category
                     }}</span>
                   </span>
                   <p-tag
-                    [value]="product.selectedStatus.name"
+                    [value]="product.inventoryStatus"
                     [severity]="getSeverity(product)"
                   ></p-tag>
                 </div>
@@ -56,13 +61,13 @@
                 class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2"
               >
                 <span class="text-2xl font-semibold">{{
-                  "$" + product.priceStacked
+                  "$" + product.price
                 }}</span>
                 <button
                   pButton
                   icon="pi pi-shopping-cart"
                   class="md:align-self-end mb-2 p-button-rounded"
-                  [disabled]="product.selectedStatus === 'OUTOFSTOCK'"
+                  [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
                 ></button>
               </div>
             </div>
@@ -79,37 +84,34 @@
             >
               <span class="flex align-items-center gap-2">
                 <i class="pi pi-tag"></i>
-                <span class="font-semibold">{{ product.category.name }}</span>
+                <span class="font-semibold">{{ product.category }}</span>
               </span>
               <p-tag
-                [value]="product.selectedStatus.name"
+                [value]="product.inventoryStatus"
                 [severity]="getSeverity(product)"
               ></p-tag>
             </div>
             <div class="flex flex-column align-items-center gap-3 py-5">
-              <!-- <img
+              <img
                 class="w-9 shadow-2 border-round"
-                [src]="
-                  product.file
-                "
-                [alt]="product.name"
-              /> -->
+                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name"
+              />
               <div class="text-2xl font-bold">{{ product.name }}</div>
               <p-rating
-                [ngModel]="product.valueRating"
+                [ngModel]="product.rating"
                 [readonly]="true"
                 [cancel]="false"
               ></p-rating>
             </div>
             <div class="flex align-items-center justify-content-between">
               <span class="text-2xl font-semibold">{{
-                "$" + product.priceStacked
+                "$" + product.price
               }}</span>
               <button
                 pButton
                 icon="pi pi-shopping-cart"
                 class="p-button-rounded"
-                [disabled]="product.selectedStatus.name === 'OUTOFSTOCK'"
+                [disabled]="product.inventoryStatus.name === 'OUTOFSTOCK'"
               ></button>
             </div>
           </div>
