--- a/src/app/pages/components/product/card/card.component.html
+++ b/src/app/pages/components/product/card/card.component.html
@@ -33,7 +33,7 @@
               >
               <img
                 class="w-9 shadow-2 border-round"
-                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name"
+                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.file" [alt]="product.name"
               />
                 <div class="text-2xl font-bold text-900">
                   {{ product.name }}
@@ -52,7 +52,7 @@
                     }}</span>
                   </span>
                   <p-tag
-                    [value]="product.inventoryStatus"
+                    [value]="product.selectedStatus"
                     [severity]="getSeverity(product)"
                   ></p-tag>
                 </div>
@@ -61,13 +61,13 @@
                 class="flex sm:flex-column align-items-center sm:align-items-end gap-3 sm:gap-2"
               >
                 <span class="text-2xl font-semibold">{{
-                  "$" + product.price
+                  "$" + product.priceStacked
                 }}</span>
                 <button
                   pButton
                   icon="pi pi-shopping-cart"
                   class="md:align-self-end mb-2 p-button-rounded"
-                  [disabled]="product.inventoryStatus === 'OUTOFSTOCK'"
+                  [disabled]="product.selectedStatus === 'OUTOFSTOCK'"
                 ></button>
               </div>
             </div>
@@ -87,14 +87,14 @@
                 <span class="font-semibold">{{ product.category }}</span>
               </span>
               <p-tag
-                [value]="product.inventoryStatus"
+                [value]="product.selectedStatus"
                 [severity]="getSeverity(product)"
               ></p-tag>
             </div>
             <div class="flex flex-column align-items-center gap-3 py-5">
               <img
                 class="w-9 shadow-2 border-round"
-                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.image" [alt]="product.name"
+                [src]="'https://primefaces.org/cdn/primeng/images/demo/product/' + product.file" [alt]="product.name"
               />
               <div class="text-2xl font-bold">{{ product.name }}</div>
               <p-rating
@@ -105,13 +105,13 @@
             </div>
             <div class="flex align-items-center justify-content-between">
               <span class="text-2xl font-semibold">{{
-                "$" + product.price
+                "$" + product.priceStacked
               }}</span>
               <button
                 pButton
                 icon="pi pi-shopping-cart"
                 class="p-button-rounded"
-                [disabled]="product.inventoryStatus.name === 'OUTOFSTOCK'"
+                [disabled]="product.selectedStatus.name === 'OUTOFSTOCK'"
               ></button>
             </div>
           </div>
